--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Διαδραστικές Δραστηριότητες Προτάσεων</title>
+    <title>Είδη Προτάσεων (Γ Γυμνασίου)</title>
     <style>
         body { 
             font-family: 'Comic Sans MS', cursive, sans-serif; 
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Διαδραστικές Δραστηριότητες για τις Προτάσεις 😊📚</h2>
+        <h2>Είδη Προτάσεων (Γ Γυμνασίου) 😊📚</h2>
         <p><strong>Δημιουργία: Παναγιώτης Δόμβρος 2025 (CC BY-NC)</strong></p>
 
         <!-- Αναφορικές Προτάσεις (Drag & Drop) -->
